# AUB-HTP

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: run-tests.yml
aub_htp/: __init__.py  _alpha_stable.py  statistics.py
aub_htp/alpha_stable_pdf/: pdf.py
aub_htp/alpha_stable_pdf/data/: skorohod_1_interpolator_x_min.pkl  skorohod_3_interpolator_x_min.pkl  zolotarev_interpolator_x_min_alpha_greater_1.pkl  zolotarev_interpolator_x_min_alpha_less_1.pkl
aub_htp/heavy_tailed_ml/: __init__.py  kmeans.py  location.py  power.py  regression.py
aub_htp/heavy_tailed_ml/data/: lookup_table_rho.json
aub_htp/heavy_tailed_ml/shape/: __init__.py  api.py  method1.py  method2.py  method3.py  utilities.py
aub_htp/machine_learning/: __init__.py  covariance.py  kmeans.py  pca.py  regressor.py
aub_htp/machine_learning/_shape/: __init__.py  method3.py
aub_htp/pdf/: __init__.py  pdf.py  zolotarev.py
aub_htp/random/: __init__.py  alpha_stable_sampler.py  cms_univariate_sampler.py  spectral_measure_sampler.py  test.py
aub_htp/statistics/: statistics.py
docs/: install.md
docs/examples/: example.py  kmeans_clustering_example.py  kmeans_comparison_with_sklearn.py  playground.py  sample_alpha_stable.ipynb
tests/: statistics_test.py  test_examples.py
